Remove all whitespace and prevent user selection

--- a/styles/loader.css
+++ b/styles/loader.css
@@ -15,6 +15,8 @@
   --yOffset8: 40px;
 
   margin: 50px 0;
+
+  user-select: none;
 }
 
 .slLetter {
